# online-mart

./: .gitignore  README.md  compose.yaml
inventory/: Dockerfile  env-example
inventory/app/: main.py
inventory/app/database/: create_schema.py
notification/: Dockerfile  env-example
notification/app/: main.py
notification/app/Models/: Email.py
notification/app/configs/: settings.py
notification/app/utils/: mailer.py
order/: Dockerfile  pyproject.toml
order/app/: main.py
order/app/Models/: Cart.py  Order.py
order/app/database/: connection.py
order/app/repositories/: CartRepository.py  OrderRepository.py
order/app/utils/: auth.py
pbproduct/: Dockerfile.dev  env-example  pyproject.toml
pbproduct/app/: main.py
pbproduct/app/Models/: Product.proto  Product.py  Product_pb2.py
pbproduct/app/database/: connection.py
pbproduct/app/kafka/consumers/: consumer.py
pbproduct/app/kafka/producers/: producer.py
pbproduct/app/repositories/: ProductRepository.py
pbproduct/app/utils/: auth.py  session.py
stripe/: Dockerfile  env-example  pyproject.toml
stripe/app/: main.py
stripe/app/Models/: Inventory.py
stripe/app/configs/: settings.py
stripe/app/repositories/: InventoryRepository.py
stripe/app/utils/: cart.py
thunder client/: thunder-collection_Online-Mart.json
user/: Dockerfile  env-example  pyproject.toml
user/app/: main.py  settings.py
user/app/Models/: User.py
user/app/repositories/: UserRepository.py
user/app/utils/: user_auth.py
